crates/sgf-core/tests/snapshots/ops_empire_name/ai_generated.snap
---
source: crates/sgf-core/tests/common/mod.rs
expression: value
---
Renamed empire 1 to Sgf Dominion of Tests
inverse: RenameEmpire { country: 1, name: "SPEC_Nagyari Allied", value: Some("{\n\t\t\tkey=\"%ADJECTIVE%\"\n\t\t\tvariables=\n\t\t\t{\n\t\t\t\t\n\t\t\t\t{\n\t\t\t\t\tkey=\"adjective\"\n\t\t\t\t\tvalue=\n\t\t\t\t\t{\n\t\t\t\t\t\tkey=\"SPEC_Nagyari\"\n\t\t\t\t\t}\n\t\t\t\t}\n \n\t\t\t\t{\n\t\t\t\t\tkey=\"1\"\n\t\t\t\t\tvalue=\n\t\t\t\t\t{\n\t\t\t\t\t\tkey=\"%ADJ%\"\n\t\t\t\t\t\tvariables=\n\t\t\t\t\t\t{\n\t\t\t\t\t\t\t\n\t\t\t\t\t\t\t{\n\t\t\t\t\t\t\t\tkey=\"1\"\n\t\t\t\t\t\t\t\tvalue=\n\t\t\t\t\t\t\t\t{\n\t\t\t\t\t\t\t\t\tkey=\"Allied\"\n\t\t\t\t\t\t\t\t\tvariables=\n\t\t\t\t\t\t\t\t\t{\n\t\t\t\t\t\t\t\t\t\t\n\t\t\t\t\t\t\t\t\t\t{\n\t\t\t\t\t\t\t\t\t\t\tkey=\"1\"\n\t\t\t\t\t\t\t\t\t\t\tvalue=\n\t\t\t\t\t\t\t\t\t\t\t{\n\t\t\t\t\t\t\t\t\t\t\t\tkey=\"Nations\"\n\t\t\t\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t\t\t\t}\n \n\t\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t}\n \n\t\t\t\t\t\t}\n\t\t\t\t\t}\n\t\t\t\t}\n \n\t\t\t}\n\t\t}"), custom_name: false }

--- gamestate
+++ gamestate
@@ -418424,6 +418424,7 @@
 	}
 	1=
 	{
+		custom_name=yes
 		has_advisor=no
 		initialized=yes
 		flag=
@@ -418450,51 +418451,8 @@
 		}
 		name=
 		{
-			key="%ADJECTIVE%"
-			variables=
-			{
-				
-				{
-					key="adjective"
-					value=
-					{
-						key="SPEC_Nagyari"
-					}
-				}
- 
-				{
-					key="1"
-					value=
-					{
-						key="%ADJ%"
-						variables=
-						{
-							
-							{
-								key="1"
-								value=
-								{
-									key="Allied"
-									variables=
-									{
-										
-										{
-											key="1"
-											value=
-											{
-												key="Nations"
-											}
-										}
- 
-									}
-								}
-							}
- 
-						}
-					}
-				}
- 
-			}
+			key="Sgf Dominion of Tests"
+			literal=yes
 		}
 		adjective=
 		{
